--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ip": "^1.1.8"
+    "ip": "^1.1.8",
+    "ipware": "^2.0.0",
+    "request-ip": "^3.3.0"
   },
   "engines": {
     "node": ">=14"
