--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "express-useragent": "^1.0.15",
     "ip": "^1.1.8",
     "ipware": "^2.0.0",
     "request-ip": "^3.3.0"
